@@ -7,6 +7,7 @@ Changes for 1.9
 
 Changes for 1.8.3rc3
 
+ - [ZBX-2777] fixed map labels when "status only" option is set (Vedmak)
  - [ZBX-2775] updated Brazilian Portuguese translation; thanks to Murilo Moreira de Oliveira (Vedmak)
  - [DEV-468] improved theme coloring in IE (Aly)
 
